<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="info.zguilhermeft.shoppinglist.AddItemActivity">

    <EditText
        android:id="@+id/editTextItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_item_name"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/editTextQuantity"
        android:text="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_quantity"
        android:inputType="number"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:layout_marginBottom="4dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonAddCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"
            android:padding="10dp"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <CheckBox
        android:id="@+id/checkboxPurchased"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buyed"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/buttonAddItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_add_item"/>

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"/>

</LinearLayout>